@@ -109,6 +109,57 @@ NOTE: You need to include C<wing.confirmations> in the data section of your app 
     });
 
 
+=head2 date-time
+
+A date time field editor.
+
+ <date-time v-model="race.properties.start_date"></date-time>
+
+=over 
+
+=item v-model
+
+The property to edit.
+
+=item id
+
+Add a DOM id to the control. Optional. Will be autogenerated if not set.
+
+=back
+
+
+=head2 markdown-editor
+
+A markdown editor to use with L<Wing::Role::Result::WebFilteredField>s.
+
+ <markdown-editor :object="crowdsale" property="description" rendered="description_html"></markdown-editor> 
+
+B<NOTE:> You need to use [% INCLUDE markdowneditor_js_include.tt %] in your footer and [% INCLUDE markdowneditor_css_include.tt %] in your header.
+
+=item object
+
+A reference to the C<wing_object> that contains the property you wish to edit.
+
+=item property 
+
+The name of the property to edit.
+
+=item rendered
+
+Optional. The name of the property that contains the rendered output. If specified will display the rendered output of the property to the right of the editor.
+
+=item help
+
+A URL to link to documentation for web filtered fields. By default links to L<http://help.thegamecrafter.com/article/253-advanced-formatting>.
+
+=item id
+
+Add a DOM id to the control. Optional. Will be autogenerated if not set.
+
+=back
+
+
+
 =head2 toggle
 
 A toggle switch component.
@@ -119,7 +170,7 @@ A toggle switch component.
 
 =item v-model
 
-The field to toggle back and forth. 
+The field to toggle back and forth. Can be boolean or 1|0.
 
 =item id
 
