@@ -4,6 +4,10 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2020-09-05
+ * Added <markdown-editor> component to wing.vue.js.
+ * Added <date-time> component to wing.vue.js.
+
 2020-09-02
  * Added 'WingBot' to user agent string of ContenFilter.
 
